kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    meta.helm.sh/release-name: frontend
    meta.helm.sh/release-namespace: hipster-shop
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/issuer: letsencrypt-production
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.allow-http: "true"
  labels:
    app: frontend
    app.kubernetes.io/managed-by: Helm
    chart: frontend
    heritage: Helm
    release: frontend
  name: frontend-ingress
  namespace: hipster-shop
spec:
  rules:
    - host: shop.46.138.241.117.nip.io
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - shop.46.138.241.117.nip.io
      secretName: shop.46.138.241.117.nip.io.secret
status:
  loadBalancer:
    ingress:
      - ip: 46.138.241.117
